# vecsearch-example

./: .gitignore  Dockerfile.dev  docker-compose.yml  es.env  memo.md
backend/: README.md  main.py  pyproject.toml
model/: pyproject.toml
