[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eland>=8.15.4",
    "fugashi>=1.3.3",
    "ipadic>=1.0.0",
    "sentence-transformers>=3.2.1",
    "torch==1.13",
    "transformers>=4.46.1",
    "unidic-lite>=1.0.8",
]
